--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           <button id="redoBtn" class="btn">Redo</button>
           <button id="saveBtn" class="btn">Save JSON</button>
           <button id="loadBtn" class="btn">Load JSON</button>
+          <button id="clearCacheBtn" class="btn">Clear Cache</button>
           <input id="loadInput" type="file" accept="application/json" hidden />
         </div>
       </header>
