--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
           <button id="playBtn" class="btn">Play</button>
           <button id="stopBtn" class="btn">Stop</button>
           <label class="field">
+            <span>Project</span>
+            <input id="projectNameInput" type="text" />
+          </label>
+          <label class="field">
             <span>BPM</span>
             <input id="bpmInput" type="number" min="40" max="240" step="1" />
           </label>
