--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
           <button id="redoBtn" class="btn">Redo</button>
           <button id="saveBtn" class="btn">Save JSON</button>
           <button id="loadBtn" class="btn">Load JSON</button>
+          <button id="importMidiBtn" class="btn">Import MIDI</button>
           <button id="clearCacheBtn" class="btn">Clear Cache</button>
           <input id="loadInput" type="file" accept="application/json" hidden />
+          <input id="midiInput" type="file" accept=".mid,.midi,audio/midi" hidden />
         </div>
       </header>
 
