--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
               <option value="0.5">1/8</option>
               <option value="0.25" selected>1/16</option>
               <option value="0.125">1/32</option>
+              <option value="0.0625">1/64</option>
             </select>
           </label>
           <label class="field">
