--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <input id="projectNameInput" type="text" />
           </label>
           <label class="field">
+            <span>Master</span>
+            <input id="masterVolumeInput" type="range" min="0" max="1" step="0.01" />
+          </label>
+          <label class="field">
             <span>BPM</span>
             <input id="bpmInput" type="number" min="40" max="240" step="1" />
           </label>
