--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
           <div class="brand-title">Chiptune Composer</div>
           <div class="brand-subtitle">DAW minimaliste / tracker moderne</div>
         </div>
+        <div class="oscilloscope">
+          <canvas id="oscilloscopeCanvas" width="220" height="64"></canvas>
+        </div>
         <div class="transport">
           <button id="playBtn" class="btn">Play</button>
           <button id="stopBtn" class="btn">Stop</button>
