--- a/index.html
+++ b/index.html
@@ -36,6 +36,22 @@
         </div>
         <div class="tools">
           <label class="field">
+            <span>All Console</span>
+            <select id="globalConsoleSelect">
+              <option value="">—</option>
+              <option value="Basics">Basics</option>
+              <option value="Complex">Complex</option>
+              <option value="NES">NES</option>
+              <option value="Famicom">Famicom</option>
+              <option value="GameBoy">GameBoy</option>
+              <option value="TurboGrafx16">TurboGrafx-16</option>
+              <option value="SNES">SNES</option>
+              <option value="Atari">Atari</option>
+              <option value="C64">C64</option>
+              <option value="Sega">Sega</option>
+            </select>
+          </label>
+          <label class="field">
             <span>Snap</span>
             <select id="snapSelect">
               <option value="1">1/4</option>
